# hlffi

./: .gitignore  .gitmodules  ANDROID_INSIGHTS_FOR_HLFFI.md  BUILD.md  BUILD_NOTES.md  CLAUDE.md  CMakeLists.txt  FFI_RESEARCH.md  HAXE_MAINLOOP_INTEGRATION.md  MAINLOOP_CLARIFICATION.md  MASTER_PLAN.md  MASTER_PLAN_STATUS.md  MEMORY_AUDIT.md  Makefile  PHASE3_NOTES.md  README.md  THREADING_MODEL_REPORT.md  TODO.md  VM_MODES_AND_THREADING_DEEP_DIVE.md  build_hashlink.bat  generate_monolithic_vcxproj.ps1  generate_monolithic_vcxproj.py  hashlink_obj_resolve_field.patch  hlffi.h  hlffi.sln  hlffi.vcxproj  hlffi_manual.md  hlvm.vcxproj  ssl.vcxproj.template  test_array_length_debug.c  test_array_values_demo.c  test_arrayobj_bindings.c  test_arrayobj_fields  test_arrays  test_arrays.c  test_arrays.vcxproj  test_bytes_demo.vcxproj  test_cache.c  test_cache_loop.vcxproj  test_callbacks.c  (+45 more)
.claude/: settings.local.json
UnrealEngine/Plugins/HLFFIPlugin/: HLFFIPlugin.uplugin  README.md
benchmark/: bench_cache_simple.c
build-hlc/: ALL_BUILD.vcxproj  CMakeCache.txt  CTestTestfile.cmake  HLFFI.sln  HLFFIConfig.cmake  INSTALL.vcxproj  RUN_TESTS.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake  hlffi.vcxproj
build-hlc/examples/: INSTALL.vcxproj  RUN_TESTS.vcxproj  cmake_install.cmake  example_hello_world.vcxproj  example_version.vcxproj
build-hlc/tests/: CTestTestfile.cmake  INSTALL.vcxproj  RUN_TESTS.vcxproj  cmake_install.cmake  test_hlc.vcxproj
cmake/: HLFFIConfig.cmake.in
design/: logo.psd
docs/: API_01_VM_LIFECYCLE.md  API_02_INTEGRATION_MODES.md  API_03_EVENT_LOOP.md  API_04_THREADING.md  API_05_HOT_RELOAD.md  API_06_TYPE_SYSTEM.md  API_07_VALUES.md  API_08_STATIC_MEMBERS.md  API_09_INSTANCE_MEMBERS.md  API_10_ARRAYS.md  API_11_MAPS.md  API_12_BYTES.md  API_13_ENUMS.md  API_14_ABSTRACTS.md  API_15_CALLBACKS.md  API_16_EXCEPTIONS.md  API_17_PERFORMANCE.md  API_18_UTILITIES.md  API_19_ERROR_HANDLING.md  API_20_DEBUGGING.md  API_INDEX.md  API_REFERENCE.md  BPFL_UEHL.cpp  CALLBACK_GUIDE.md  DEBUGGER_ARCHITECTURE.md  DEBUG_FINDINGS.md  EVENTLOOP_QUICKSTART.md  GC_STACK_SCANNING.md  HASHLINK_PATCH.md  HAXE_ARRAY_C_GUIDE.md  HAXE_STRUCT_C_GUIDE.md  HAXE_STRUCT_HLNATIVE_CORRECT.md  HLC_SUPPORT.md  HOT_RELOAD.md  MAPS_GUIDE.md  PHASE1_EVENTLOOP_INTEGRATION.md  PHASE3_COMPLETE.md  PHASE3_NOTES.md  PHASE4_INSTANCE_MEMBERS.md  PHASE5_COMPLETE.md  (+8 more)
docs/guide/: GUIDE_01_GETTING_STARTED.md  GUIDE_02_CALLING_HAXE.md  GUIDE_03_DATA_EXCHANGE.md  GUIDE_04_ADVANCED.md  README.md
docs/old_outdated/: BPFL_UEHL.h  DOCUMENTATION_SUMMARY.md  EVENTLOOP_QUICKSTART.md  Embed.Txt  GC_STACK_SCANNING.md  HASHLINK_PATCH.md  HAXE_MAINLOOP_INTEGRATION.md  HAXE_STRUCT_HLNATIVE_CORRECT.md  HOT_RELOAD.md  MAINLOOP_CLARIFICATION.md  MASTER_PLAN.md  NATIVE_ARRAYS.md  PHASE6_COMPLETE.md  STRUCT_MISMATCH_FIX.md  UEHL_FFI.cpp  VM_MODES_AND_THREADING_DEEP_DIVE.md  VM_RESTART_INVESTIGATION.md  hlffi_manual.md
docs/wiki/: HOME.md  PREREQUISITES.md
examples/: CMakeLists.txt  Game.hx  callback_event_system.c  example_threaded.c  example_threaded.vcxproj  native_array_extension.c
examples/haxe/: GameCallbacks.hx
examples/hello_world/: hello_world.c  hello_world.vcxproj
examples/version/: version.c  version.vcxproj
hashlink-nightly/hashlink-3c9e352-win64/: directx.hdll  dx12.hdll  fmt.hdll  heaps.hdll  mysql.hdll  openal.hdll  sdl.hdll  sqlite.hdll  ssl.hdll  ui.hdll  uv.hdll
hashlink-nightly/hashlink-3c9e352-win64/include/: hl.h  hlc.h
include/: hlffi.h  hlffi_array_helpers.h  hlffi_struct_helpers.h
src/: hlffi_abstracts.c  hlffi_bytes.c  hlffi_cache.c  hlffi_callbacks.c  hlffi_core.c  hlffi_enums.c  hlffi_events.c  hlffi_hlc.c  hlffi_integration.c  hlffi_internal.h  hlffi_lifecycle.c  hlffi_maps.c  hlffi_objects.c  hlffi_reload.c  hlffi_threading.c  hlffi_types.c  hlffi_values.c
test/: .gitignore  ArrayTest.hx  Arrays.hx  BytesTest.hx  CMakeLists.txt  CacheTest.hx  Callback.hx  Callbacks.hx  DebugTest.hx  EnumTest.hx  EventLoopTest.hx  Exceptions.hx  Game.hx  HotReload.hx  Main.hx  MainLoopTest.hx  MapTest.hx  MinimalEnumTest.hx  NativeArrayDemo.hx  Player.hx  README.md  StaticMain.hx  TestNativeArrays.hx  ThreadedCounter.hx  ThreadedCounterBlocking.hx  Threading.hx  ThreadingSimple.hx  Timers.hx  build.bat  build.hxml  check_string_array.hx  static_test.hx  test_all_arrays.c
test/benchmark/: bench_cache.c
test/dev_tests/: test_arrayobj_fields.c  test_arrays.c  test_bool_array.c  test_bytes_demo.c  test_bytes_new  test_cache.c  test_cache.vcxproj  test_cache_loop.c  test_cache_memory.c  test_cache_memory.vcxproj  test_cache_minimal.c  test_cache_minimal.vcxproj  test_callbacks.c  test_enum_demo.c  test_exceptions.vcxproj  test_gameloop.vcxproj  test_hello.vcxproj  test_hlffi_hello.c  test_hlffi_hello.vcxproj  test_hot_reload.vcxproj  test_map_demo.vcxproj  test_native_arrays.c  test_no_wrap.c  test_nonblocking.vcxproj  test_runner.c  test_show_arrays  test_show_arrays.c  test_simple_reflection.c  test_static.c  test_static_extended.vcxproj  test_string_debug.c  test_string_details.c  test_threaded_restart.vcxproj  test_threading  test_threading_minimal.vcxproj  test_timers.c  test_vm_restart.c  test_vm_restart.vcxproj
test/haxe/: EntryPoint.hx
test/hlc_output/: hlc.json  main.c
test/hlc_output/_std/: Main.c  Main.h  Std.h  Sys.h  Type.c  Type.h
test/hlc_output/hl/: functions.c  globals.c  hashes.c  init.c  natives.h  reflect.c  (+1 more)
test/hlc_test/: CMakeLists.txt  HlcTestSuite.hx  build_hlc_test.bat  hlc_entry.c  hlc_suite_entry.c  test_hlc.c  test_hlc_suite.c
test/hlc_test/hlc_suite_output/: hlc.json  main.c
test/hlc_test/hlc_suite_output/_std/: HlcTestSuite.c  HlcTestSuite.h  Std.c  StringBuf.c  Sys.c  TestGame.c  TestGame.h  TestPlayer.c  TestPlayer.h  TestResult.h  TestState.h
test/hlc_test/hlc_suite_output/haxe/ds/: StringMap.c
test/hlc_test/hlc_suite_output/haxe/iterators/: ArrayKeyValueIterator.h
test/hlc_test/hlc_suite_output/hl/: functions.c  globals.c  hashes.c  init.c  natives.h  reflect.c  types.c
test/jit_test/: test_debug.c  test_jit_suite.c
tests/: CMakeLists.txt
(+9 files in other folders)
